--- a/PetShop/PetShop.csproj
+++ b/PetShop/PetShop.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\PetShop.Common\PetShop.Common.csproj" />
     <ProjectReference Include="..\PetShop.Data.Models\PetShop.Data.Models.csproj" />
     <ProjectReference Include="..\PetShop.Data\PetShop.Data.csproj" />
+    <ProjectReference Include="..\PetShop.Sevices.Data\PetShop.Sevices.Data.csproj" />
     <ProjectReference Include="..\PetShop.Web.Infrastructure\PetShop.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\PetShop.Web.ViewModels\PetShop.Web.ViewModels.csproj" />
   </ItemGroup>
