--- a/PetShop.Sevices.Data/PetShop.Sevices.Data.csproj
+++ b/PetShop.Sevices.Data/PetShop.Sevices.Data.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\PetShop.Common\PetShop.Common.csproj" />
     <ProjectReference Include="..\PetShop.Data.Models\PetShop.Data.Models.csproj" />
     <ProjectReference Include="..\PetShop.Data\PetShop.Data.csproj" />
+    <ProjectReference Include="..\PetShop.Services.Data.Models\PetShop.Services.Data.Models.csproj" />
     <ProjectReference Include="..\PetShop.Web.ViewModels\PetShop.Web.ViewModels.csproj" />
   </ItemGroup>
 
