Add ReCapcha in Log In and Register

--- a/PetShop/appsettings.Development.json
+++ b/PetShop/appsettings.Development.json
@@ -2,22 +2,26 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-5M0JIPH\\SQLEXPRESS;Database=PetShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  
-    "Identity": {
-      "SignIn": {
-        "RequireConfirmedAccount": false
-      },
-      "Password": {
-        "RequireLowercase": false,
-        "RequireUppercase": false,
-        "RequireNonAlphanumeric": false,
-        "RequiredLength": 4
-      }
+
+  "Identity": {
+    "SignIn": {
+      "RequireConfirmedAccount": false
     },
+    "Password": {
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequiredLength": 4
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RecaptchaSettings": {
+    "SiteKey": "6LcjUpYnAAAAAHLZ0FVgBp9__GHZfNWZ8mXaJrdd",
+    "SecretKey": "6LcjUpYnAAAAAC6M7Sq-FplUAaFIwHwVPucIoWVg"
   }
 }
